Fixed layout issue of "Learn How" button in Dev Hub page
Fixes #4308

--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -263,7 +263,7 @@
   }
 
   .DevHub-content-copy .Button {
-    margin-top: 25px;
+    margin: 25px 0 40px 0;
   }
 
   .DevHub-content-copy--manage .Button {
